--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "752dc3b8-afe4-45f1-9afd-e734040d2463"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
