--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,11 @@
                 "glob": "llm.txt",
                 "input": "src/assets",
                 "output": "/"
+              },
+              {
+                "glob": "sitemap.xml",
+                "input": "src/assets",
+                "output": "/"
               }
             ],
             "styles": [
